--- a/Hello React/.classpath
+++ b/Hello React/.classpath
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
-	<classpathentry kind="lib" path="/media/hans/Space1/Projects/githome/drunken-nemesis/Hello React/libTUIO.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="/home/hans/Git/drunken-nemesis/reactplane/libTUIO.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
