added classes SVGLoader.java and SVGTextureKey.java SVG load functionality

--- a/opus/OpusProject/nbproject/project.properties
+++ b/opus/OpusProject/nbproject/project.properties
@@ -31,13 +31,17 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.batik-transcoder.jar=lib/batik-1.7/lib/batik-transcoder.jar
+file.reference.batik.jar=lib/batik-1.7/batik.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
-    ${libs.jme3-libraries.classpath}
+    ${libs.jme3-libraries.classpath}:\
+    ${file.reference.batik-transcoder.jar}:\
+    ${file.reference.batik.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +77,7 @@ main.class=com.opus.gui.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.6
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
