--- a/.gitignore
+++ b/.gitignore
@@ -652,3 +652,4 @@ opus/OpusProject/lib/batik-1.7/samples/textRotateShadows.svg
 opus/OpusProject/liblwjgl.dylib
 opus/OpusProject/liblwjgl.jnilib
 opus/OpusProject/openal.dylib
+/opus/OpusProject/dist/
