--- a/opus/OpusProject/nbproject/project.properties
+++ b/opus/OpusProject/nbproject/project.properties
@@ -73,6 +73,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
+mac.app.enabled=true
 main.class=com.opus.gui.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
