--- a/opus/OpusProject/nbproject/project.properties
+++ b/opus/OpusProject/nbproject/project.properties
@@ -31,14 +31,20 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.qrgen-1.0.jar=/Users/Senju/Downloads/qrgen-1.0.jar
 file.reference.TUIO_JAVA-src=../TUIO_JAVA/src
+file.reference.zxing-core-1.7.jar=/Users/Senju/Downloads/zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=/Users/Senju/Downloads/zxing-j2se-1.7.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${libs.jme3.classpath}:\
-    ${libs.jme3-libraries.classpath}
+    ${libs.jme3-libraries.classpath}:\
+    ${file.reference.qrgen-1.0.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${file.reference.zxing-core-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
