--- a/opus/OpusProject/nbproject/project.properties
+++ b/opus/OpusProject/nbproject/project.properties
@@ -31,6 +31,12 @@ dist.jar=${dist.dir}/${application.title}.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.backport-util-concurrent-3.1.jar=../ical4j-1.0.4/lib/backport-util-concurrent-3.1.jar
+file.reference.commons-codec-1.5.jar=../ical4j-1.0.4/lib/commons-codec-1.5.jar
+file.reference.commons-lang-2.6.jar=../ical4j-1.0.4/lib/commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=../ical4j-1.0.4/lib/commons-logging-1.1.1.jar
+file.reference.groovy-all-1.8.6.jar=../ical4j-1.0.4/lib/groovy-all-1.8.6.jar
+file.reference.ical4j-1.0.4.jar=../ical4j-1.0.4/lib/ical4j-1.0.4.jar
 file.reference.qrgen-1.0.jar=../qrgen-1.0.jar
 file.reference.TUIO_JAVA-src=../TUIO_JAVA/src
 file.reference.zxing-core-1.7.jar=../zxing-core-1.7.jar
@@ -44,7 +50,13 @@ javac.classpath=\
     ${libs.jme3-libraries.classpath}:\
     ${file.reference.qrgen-1.0.jar}:\
     ${file.reference.zxing-core-1.7.jar}:\
-    ${file.reference.zxing-j2se-1.7.jar}
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${file.reference.backport-util-concurrent-3.1.jar}:\
+    ${file.reference.commons-codec-1.5.jar}:\
+    ${file.reference.commons-lang-2.6.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-1.8.6.jar}:\
+    ${file.reference.ical4j-1.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
