--- a/opus/OpusProject/nbproject/project.properties
+++ b/opus/OpusProject/nbproject/project.properties
@@ -96,7 +96,7 @@ main.class=com.opus.gui.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
-platform.active=JDK_1.6
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
