--- a/opus/OpusProject/nbproject/project.properties
+++ b/opus/OpusProject/nbproject/project.properties
@@ -39,6 +39,11 @@ file.reference.groovy-all-1.8.6.jar=../ical4j-1.0.4/lib/groovy-all-1.8.6.jar
 file.reference.ical4j-1.0.4.jar=../ical4j-1.0.4/lib/ical4j-1.0.4.jar
 file.reference.qrgen-1.0.jar=../qrgen-1.0.jar
 file.reference.TUIO_JAVA-src=../TUIO_JAVA/src
+file.reference.twitter4j-async-3.0.3.jar=../twitter4j-3.0.3/lib/twitter4j-async-3.0.3.jar
+file.reference.twitter4j-core-3.0.3.jar=../twitter4j-3.0.3/lib/twitter4j-core-3.0.3.jar
+file.reference.twitter4j-examples-3.0.3.jar=../twitter4j-3.0.3/lib/twitter4j-examples-3.0.3.jar
+file.reference.twitter4j-media-support-3.0.3.jar=../twitter4j-3.0.3/lib/twitter4j-media-support-3.0.3.jar
+file.reference.twitter4j-stream-3.0.3.jar=../twitter4j-3.0.3/lib/twitter4j-stream-3.0.3.jar
 file.reference.zxing-core-1.7.jar=../zxing-core-1.7.jar
 file.reference.zxing-j2se-1.7.jar=../zxing-j2se-1.7.jar
 includes=**
@@ -56,7 +61,12 @@ javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.groovy-all-1.8.6.jar}:\
-    ${file.reference.ical4j-1.0.4.jar}
+    ${file.reference.ical4j-1.0.4.jar}:\
+    ${file.reference.twitter4j-async-3.0.3.jar}:\
+    ${file.reference.twitter4j-core-3.0.3.jar}:\
+    ${file.reference.twitter4j-examples-3.0.3.jar}:\
+    ${file.reference.twitter4j-media-support-3.0.3.jar}:\
+    ${file.reference.twitter4j-stream-3.0.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -96,7 +106,7 @@ main.class=com.opus.gui.Main
 meta.inf.dir=${src.dir}/META-INF
 manifest.file=MANIFEST.MF
 mkdist.disabled=false
-platform.active=JDK_1.6
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
