/Users/hady/Development/git_workspace/drunken-nemesis/.gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 opus/OpusProject/assets/qrcodes/
-opus/OpusProject/build/classes/.netbeans_automatic_build
+opus/OpusProject/build/
 opus/OpusProject/build/classes/.netbeans_update_resources
 opus/OpusProject/build/classes/TUIO/TuioClient.class
 opus/OpusProject/build/classes/TUIO/TuioContainer.class
